<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.blogbasbas.promenengah1.activity.Telepon">
    <Button
        android:id="@+id/btnCall"
        android:text="@string/call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btnDialCall"
        android:text="@string/dialcall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btntListContact"
        android:text="@string/listContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
